--- a/Coin/交易系统.md
+++ b/Coin/交易系统.md
@@ -4,4 +4,8 @@
 - LSUR: 多空比
 - FR: 资金费率
 图解：
-![](https://files.catbox.moe/qwqs73.jpg)
+![](https://github.dev/kosmosr/dev/blob/4a320a409ef0d8555eabddcd17d6afc0db49ba19/Coin/images/QQ%E5%9B%BE%E7%89%8720210917002735.jpg)
+
+## 交易
+- 不追高，等回调进
+- 现货与合约73仓位，当合约赚到500%时拿出20%放现货
